// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefenseTokens matches the snapshot 1`] = `
<div>
  <div>
    <div
      class="d-flex justify-content-center my-2"
    >
      <div
        class="collapse.show token-parent"
      >
        <button
          class="btn border btn-light border-secondary rounded-lg mx-1 token-counter-dodge"
          title="Dodge"
        />
        <span
          class="token-count"
        >
          0
        </span>
      </div>
      <div
        class="collapse.show token-parent"
      >
        <button
          class="btn border btn-light border-secondary rounded-lg mx-1 token-counter-surge"
          title="Surge"
        />
        <span
          class="token-count"
        >
          0
        </span>
      </div>
      <div
        class="collapse.show token-parent"
      >
        <button
          class="btn border btn-light border-secondary rounded-lg mx-1 token-counter-shield"
          title="Shield"
        />
        <span
          class="token-count"
        >
          0
        </span>
      </div>
      <div
        class="collapse.show token-parent"
      >
        <button
          class="btn border btn-light border-secondary rounded-lg mx-1 token-counter-observation"
          title="Observation"
        />
        <span
          class="token-count"
        >
          0
        </span>
      </div>
      <div
        class="collapse.show token-parent"
      >
        <button
          class="btn border btn-light border-secondary rounded-lg mx-1 token-counter-suppression"
          title="Suppression"
        />
        <span
          class="token-count"
        >
          0
        </span>
      </div>
      <button
        class="btn btn-secondary border rounded-lg clear-button mx-2 my-auto"
        title="Clear defense tokens"
      />
    </div>
  </div>
</div>
`;

exports[`DefenseTokens matches the snapshot for simplified view 1`] = `
<div>
  <div>
    <div
      class="d-flex justify-content-center my-2"
    >
      <div
        class="collapse.show token-parent"
      >
        <button
          class="btn border btn-light border-secondary rounded-lg mx-1 token-counter-dodge"
          title="Dodge"
        />
        <span
          class="token-count"
        >
          0
        </span>
      </div>
      <div
        class="collapse.show token-parent"
      >
        <button
          class="btn border btn-light border-secondary rounded-lg mx-1 token-counter-surge"
          title="Surge"
        />
        <span
          class="token-count"
        >
          0
        </span>
      </div>
      <div
        class="collapse token-parent"
      >
        <button
          class="btn border btn-light border-secondary rounded-lg mx-1 token-counter-shield"
          title="Shield"
        />
        <span
          class="token-count"
        >
          0
        </span>
      </div>
      <div
        class="collapse token-parent"
      >
        <button
          class="btn border btn-light border-secondary rounded-lg mx-1 token-counter-observation"
          title="Observation"
        />
        <span
          class="token-count"
        >
          0
        </span>
      </div>
      <div
        class="collapse.show token-parent"
      >
        <button
          class="btn border btn-light border-secondary rounded-lg mx-1 token-counter-suppression"
          title="Suppression"
        />
        <span
          class="token-count"
        >
          0
        </span>
      </div>
      <button
        class="btn btn-secondary border rounded-lg clear-button mx-2 my-auto"
        title="Clear defense tokens"
      />
    </div>
  </div>
</div>
`;
